--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -8,33 +8,57 @@ QCheckBox[objectName^="checkBox_"]{
     color: @color4;
 }
 QCheckBox[objectName^="checkBox_"]:disabled{
-    color: #C0C0C0;
+    color: @color13;
 }
 QCheckBox[objectName^="checkBox_"]::indicator:unchecked {
-    image: url(@icon_path/light-unchecked.png);
+    image: url(@icon_path/@unchecked_enabled);
 }
 QCheckBox[objectName^="checkBox_"]::indicator:checked {
-    image: url(@icon_path/light-checked.png);
+    image: url(@icon_path/@checked_enabled);
 }
 QCheckBox[objectName^="checkBox_"]::indicator:disabled:checked {
-    image: url(@icon_path/light-checked-disabled.png);
+    image: url(@icon_path/@checked_disabled);
 }
 QCheckBox[objectName^="checkBox_"]::indicator:disabled:unchecked {
-    image: url(@icon_path/light-unchecked-disabled.png);    
+    image: url(@icon_path/@unchecked_disabled);    
 }
 QComboBox{
-    font-family: "Ubuntu";
+    font: 11pt "Ubuntu";
+    border: 1px solid #ABABAB;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
+    selection-background-color: #308CC6;
+    selection-color: #FFFFFF;
+}
+QComboBox QAbstractItemView {
+    background-color: @color2;
+    color: @color4;
 }
 QComboBox::drop-down {
     border: none;
 }
 QComboBox::down-arrow {
-    image: url(@icon_path/light-down-arrow.png);
+    image: url(@icon_path/@down_arrow_enabled);
     background-color: transparent;
 }
 QComboBox::down-arrow:disabled {
-    image: url(@icon_path/light-down-arrow-disabled.png);
+    image: url(@icon_path/@down_arrow_disabled);
     background-color: transparent;
+}
+QComboBox::drop-down:button {
+    background-color: transparent;
+}
+QComboBox:disabled{
+    border: 1px solid #C4C4C4;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
+    color: @color13;
+}
+QComboBox:hover{
+    border: 1px solid #ABABAB;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
+    color: @color12;
 }
 QDoubleSpinBox{
     background-color: @color5;
@@ -43,8 +67,8 @@ QDoubleSpinBox{
     border: 1px solid lightgray;
 }
 QDoubleSpinBox:disabled{
-    background-color: @color5;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QDoubleSpinBox::up-button {
@@ -69,7 +93,7 @@ QListView{
 }
 QListView:disabled{
     background-color: @color5;
-    color: #C0C0C0;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QListWidget{
@@ -80,7 +104,7 @@ QListWidget{
 }
 QListWidget:disabled{
     background-color: @color5;
-    color: #C0C0C0;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QMenu{
@@ -92,15 +116,28 @@ QMenu::item{
     background-color:transparent;
 }
 QMenu::item:selected{
-    color: @color5;
+    color: #FFFFFF;
     background-color: #308CC6;
 }
 QMenu::item:disabled{
-    color: darkgray;
+    color: @color13;
 }
 QMenu:selected{
     color: @color5;
     background-color: #308CC6;
+}
+QMenuBar {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color2, stop: 1 @color1);
+    color: @color4;
+    border-bottom: 1px solid lightGrey;
+}
+QMenuBar::item:focus:pressed {
+    color: #FFFFFF;
+    background-color: #308CC6;
+}
+QMenuBar::item:selected {
+    background: transparent;
+    margin-bottom: @menu_hover_padding; 
 }
 QPlainTextEdit{
     border: 1px solid lightgray;
@@ -112,8 +149,8 @@ QPlainTextEdit{
 QPlainTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-    background-color: #EFEFEF;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     font-family: "Ubuntu";
 }
 QProgressBar{
@@ -129,7 +166,7 @@ QProgressBar{
 }*/
 QProgressBar:disabled{
     background-color: @color5;
-    color: #C0C0C0;
+    color: @color13;
 }
 QPushButton{
     font-family: "Ubuntu";
@@ -138,20 +175,20 @@ QPushButton[objectName^="pushButton_"]{
     border: 1px solid #ABABAB;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
-    color: black;
+    color: @color12;
     font-family: "Ubuntu";
 }
 QPushButton[objectName^="pushButton_"]:disabled{
     border: 1px solid #C4C4C4;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
-    color: #C0C0C0;
+    color: @color13;
 }
 QPushButton[objectName^="pushButton_"]:hover{
     border: 1px solid #ABABAB;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
-    color: black;
+    color: @color12;
 }
 /*
 QPushButton[objectName^="pushButton_"]:pressed{
@@ -170,14 +207,14 @@ QRadioButton{
     color: @color4;
 }
 QRadioButton:disabled{
-    color: #C0C0C0;
+    color: @color13;
 }
 QRadioButton::indicator:unchecked {
-    image: url(@icon_path/light-radio.png);
+    image: url(@icon_path/@radio_unchecked_enabled);
     padding-left: -1;
 }
 QRadioButton::indicator:checked {
-    image: url(@icon_path/light-radio-checked.png);
+    image: url(@icon_path/@radio_checked_enabled);
     padding-left: -1;
 }
 QSpinBox{
@@ -187,8 +224,8 @@ QSpinBox{
     border: 1px solid lightgray;
 }
 QSpinBox:disabled{
-    background-color: @color5;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QSpinBox::up-button {
@@ -209,22 +246,24 @@ QTableWidget{
     color: @color4;
     border: 1px solid #B8B8B8;
     font-family: "Ubuntu";
+    font-size: 10pt;
 }
 QTableWidget > QHeaderView{
     background-color: @color2;
     color: @color4;
+    font-size: 10pt;
 }
 QTableWidget > QHeaderView:disabled{
     background-color: @color2;
-    color: #C0C0C0;
+    color: @color13;
 }
 QTableWidget > QTableCornerButton{
     background-color: @color2;
     color: @color4;
 }
 QTableWidget:disabled{
-    background-color: #EFEFEF;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
 }
 #tabWidget > QTabBar::tab {
     width: 132px; 
@@ -242,14 +281,14 @@ QTabBar::tab:disabled {
     color: rgb(150, 150, 150);
 }
 QTabWidget::pane { 
-    border: 1px solid #17365D;
+    border: 1px solid @color3;
 }
 QTabBar::tab {
     qproperty-alignment: AlignCenter;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-    border: 1px solid #17365D;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 @color3, stop:1 @color3);
+    border: 1px solid @color3;
     color:rgb(0, 220, 0);
     font: bold 10pt "Ubuntu";
     margin-right:1px;
@@ -273,8 +312,8 @@ QTextEdit{
 QTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-    background-color: #EFEFEF;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     font-family: "Ubuntu";
 }
 QTreeView{
@@ -285,7 +324,7 @@ QTreeView{
     border: 1px solid lightgray;
 }
 QTreeView > QHeaderView::section{
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     color: @color4;
     font-size: 10pt;
     border: 1px solid #D4D4D4;
@@ -395,13 +434,12 @@ QFrame[objectName^="frame4_"]{
 }
 QFrame[objectName^="frame5_"]{
     background-color: @color2;    
-    border: 1px solid @color1;
+    border: 1px solid lightgray;
 }
 QFrame[objectName^="frame6_"]{
     background-color: @color1;    
     border: 1px solid @color3;
 }
-
 
 QTextEdit[objectName^="textEdit1_"]{
     border: 1px solid @color3;
@@ -417,9 +455,6 @@ QTextEdit[objectName^="textEdit2_"]{
 
 
 QTableWidget[objectName^="tableWidget1_"]{border: 1px solid @color3;}
-#tableWidget1_attack_flow_graph_current_values > QHeaderView {font-size: 10pt;}
-#tableWidget1_attack_packet_editor > QHeaderView {font-size: 10pt;}
-#treeWidget_attack_attacks > QHeaderView {font-size: 10pt;}
 
 QLabel[objectName^="label1_"]{
     qproperty-alignment: AlignCenter;
@@ -433,10 +468,10 @@ QLabel[objectName^="label1_"]{
     font: bold 10pt "Ubuntu";
 }
 QLabel[objectName^="label2_"]{color: @color4;}
-QLabel[objectName^="label2_"]:disabled{color: #C0C0C0;}
+QLabel[objectName^="label2_"]:disabled{color: @color13;}
 QLabel[objectName^="label3_"]{
     color: @color4;
-    border: 1px solid @color1;
+    border: 1px solid lightgray;
 }
 QLabel#label4_status1{
     color: @color4;
@@ -504,98 +539,16 @@ QWidget#scrollAreaWidgetContents_2 {
     background-color: @color1;
 }
 
-QMenuBar#menubar {
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color2, stop: 1 @color1);
-    color: @color4;
-    border-bottom: 1px solid lightGrey;
-}
-QMenuBar#menubar::item:focus:pressed {
-    color:@color5;
-    background-color:#308CC6;
-}
-QMenuBar#menubar::item:selected {
-    background: transparent;
-    margin-bottom: @menu_hover_padding; 
-}
 
-/*Change Combobox Colors*/
-QComboBox[objectName^="comboBox_"]{
-    padding-left: 4px;
-    border: 1px solid #ABABAB;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-    color: black;
-    selection-background-color: #308CC6;
-    selection-color: white;
-}
-/* Don't know how to remove checkmarks */
-QComboBox::item:!selected {
-    background-color: #EFEFEF;
-    color: black;
-}
-QComboBox::drop-down:button {
-    background-color: transparent;
-}
-QComboBox[objectName^="comboBox_"]:disabled{
-    padding-left: 4px;
-    border: 1px solid #C4C4C4;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-    color: #C0C0C0;
-}
-QComboBox[objectName^="comboBox_"]:hover{
-    padding-left: 4px;
-    border: 1px solid #ABABAB;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #F8F8F8);
-    color: black;
-}
 QComboBox[objectName^="comboBox2_"]{
-    padding-left: 4px;
-    border: 1px solid #ABABAB;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-    color: black;
-    font: 10pt "Ubuntu";
-    selection-background-color: #308CC6;
-    selection-color: white;
+    font-size: 10pt;
 }
 QComboBox[objectName^="comboBox2_"]:disabled{
-    padding-left: 4px;
-    border: 1px solid #C4C4C4;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-    color: #C0C0C0;
-}
-QComboBox[objectName^="comboBox2_"]:hover{
-    padding-left: 4px;
-    border: 1px solid #ABABAB;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #F8F8F8);
-    color: black;
+    font-size: 10pt;
 }
 QComboBox[objectName^="comboBox3_"]{
-    border: 1px solid #ABABAB;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-    color: black;
-    selection-background-color: #308CC6;
-    selection-color: white;
     text-align: right;
 }
-QComboBox[objectName^="comboBox3_"]:disabled{
-    border: 1px solid #C4C4C4;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-    color: #C0C0C0;
-}
-QComboBox[objectName^="comboBox3_"]:hover{
-    border: 1px solid #ABABAB;
-    border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #F8F8F8);
-    color: black;
-}
-
 
 
 QTableWidget#tableWidget_status_headers{
@@ -619,8 +572,8 @@ QDialog#Dialog_chooser{background-color: @color1;}
 QDialog#Dialog_new_soi{background-color: @color1;}
 QDialog#SigMF_Window{background-color: @color1;}
 QDialog#Dialog_custom_color{background-color: @color1;}
-QDialog#Dialog_install{background-color: #EFEFEF;}
-QDialog#Dialog_install2{background-color: #EFEFEF;}
+QDialog#Dialog_install{background-color: @color1}
+QDialog#Dialog_install2{background-color: @color1}
 
 
 QTreeWidget#treeWidget_software::item{
@@ -642,7 +595,7 @@ QTreeWidget#treeWidget_software {
 QPlainTextEdit#plainTextEdit_commands {
     border: 1px solid @color3;
     background-color: @color2;
-    color:black;
+    color: @color4;
 }
 
 QTabWidget#tabWidget2_2::pane{
@@ -657,7 +610,7 @@ QWidget#HardwareSelect{
 
 QTreeView#treeWidget_attack_attacks > QHeaderView::section{
     color: @color5;
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 @color3, stop:1 @color3);
     font: bold 10pt "Ubuntu";
     border: none;
     padding: 2px;
