--- a/UI/custom_color.ui
+++ b/UI/custom_color.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>395</height>
+    <height>525</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
      <x>5</x>
      <y>5</y>
      <width>380</width>
-     <height>385</height>
+     <height>515</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -36,7 +36,7 @@
     <property name="geometry">
      <rect>
       <x>105</x>
-      <y>350</y>
+      <y>480</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -49,7 +49,7 @@
     <property name="geometry">
      <rect>
       <x>195</x>
-      <y>350</y>
+      <y>480</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -62,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>75</y>
+      <y>110</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -83,7 +83,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>105</y>
+      <y>140</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -94,7 +94,7 @@
      </font>
     </property>
     <property name="text">
-     <string>custom_color4 (Font Color):</string>
+     <string>custom_color4 (Label Text):</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -104,7 +104,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>100</y>
+      <y>135</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -124,7 +124,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>45</y>
+      <y>80</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -145,7 +145,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>130</y>
+      <y>165</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -165,7 +165,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>70</y>
+      <y>105</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -185,7 +185,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>135</y>
+      <y>170</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -206,7 +206,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>40</y>
+      <y>75</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -226,7 +226,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>10</y>
+      <y>45</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -246,7 +246,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>15</y>
+      <y>50</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -267,7 +267,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>10</y>
+      <y>45</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -280,7 +280,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>40</y>
+      <y>75</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -293,7 +293,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>70</y>
+      <y>105</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -306,7 +306,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>100</y>
+      <y>135</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -319,7 +319,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>130</y>
+      <y>165</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -332,7 +332,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>165</y>
+      <y>200</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -353,7 +353,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>160</y>
+      <y>195</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -366,7 +366,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>160</y>
+      <y>195</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -386,7 +386,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>195</y>
+      <y>230</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -407,7 +407,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>190</y>
+      <y>225</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -420,7 +420,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>190</y>
+      <y>225</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -440,7 +440,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>225</y>
+      <y>260</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -461,7 +461,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>220</y>
+      <y>255</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -474,7 +474,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>220</y>
+      <y>255</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -494,7 +494,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>255</y>
+      <y>290</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -515,7 +515,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>250</y>
+      <y>285</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -528,7 +528,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>250</y>
+      <y>285</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -548,7 +548,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>285</y>
+      <y>320</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -569,7 +569,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>280</y>
+      <y>315</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -582,7 +582,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>280</y>
+      <y>315</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -602,7 +602,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>315</y>
+      <y>350</y>
       <width>235</width>
       <height>17</height>
      </rect>
@@ -623,7 +623,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>310</y>
+      <y>345</y>
       <width>40</width>
       <height>27</height>
      </rect>
@@ -636,7 +636,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>310</y>
+      <y>345</y>
       <width>85</width>
       <height>27</height>
      </rect>
@@ -650,6 +650,220 @@ p, li { white-space: pre-wrap; }
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;#BBBBBB&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label2_143">
+    <property name="geometry">
+     <rect>
+      <x>105</x>
+      <y>10</y>
+      <width>85</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Autofill:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_autofill">
+    <property name="geometry">
+     <rect>
+      <x>195</x>
+      <y>5</y>
+      <width>85</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="currentIndex">
+     <number>2</number>
+    </property>
+    <item>
+     <property name="text">
+      <string>Light</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Dark</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Custom</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label2_155">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>380</y>
+      <width>235</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>custom_color12 (Button Text):</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_color12">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>375</y>
+      <width>40</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pick</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit_color12">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>375</y>
+      <width>85</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>false</bool>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;#CCCCCC&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label2_156">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>410</y>
+      <width>235</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>custom_color13 (Disabled Text):</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_color13">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>405</y>
+      <width>40</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pick</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit_color13">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>405</y>
+      <width>85</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>false</bool>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;#DDDDDD&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label2_157">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>440</y>
+      <width>235</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>icon_style (Icon Images):</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_icon_style">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>435</y>
+      <width>85</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="currentIndex">
+     <number>1</number>
+    </property>
+    <item>
+     <property name="text">
+      <string>Light</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Dark</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>36</y>
+      <width>378</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
